--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -74,7 +74,7 @@
                 android:id="@+id/text_details"
                 android:textSize="22sp"
                 android:textColor="@color/black"
-                android:layout_marginTop="8dp">
+                android:layout_margin="7dp">
 
             </TextView>
 
@@ -84,7 +84,7 @@
                 android:id="@+id/text_details_content"
                 android:textSize="20sp"
                 android:textColor="@color/black"
-                android:layout_marginTop="8dp">
+                android:layout_margin="7dp">
 
             </TextView>
         </LinearLayout>
